crates/syntax/src/snapshots/syntax__lexer__tests__bangoperator.snap
---
source: crates/syntax/src/lexer.rs
expression: "tokenize(\"!con !add !sub !mul !div !not !log2 !and !or !xor !sra !srl !shl !listconcat !listflatten !listsplat !strconcat !initialized !instances !interleave !substr !find !cast !subst !foreach !filter !foldl !head !tail !size !sort !switch !empty !if !cond !eq !isa !dag !ne !le !lt !ge !gt !setdagop !setdagopname !getdagop !getdagopname !exists !listremove !tolower !toupper !range !getdagarg !getdagname !setdagarg !setdagname !repr !match\")"
---
[
    XCon,
    Whitespace,
    XAdd,
    Whitespace,
    XSub,
    Whitespace,
    XMul,
    Whitespace,
    XDiv,
    Whitespace,
    XNot,
    Whitespace,
    Error,
    IntVal,
    Whitespace,
    XAnd,
    Whitespace,
    XOr,
    Whitespace,
    XXor,
    Whitespace,
    XSra,
    Whitespace,
    XSrl,
    Whitespace,
    XShl,
    Whitespace,
    XListConcat,
    Whitespace,
    XListFlatten,
    Whitespace,
    XListSplat,
    Whitespace,
    XStrConcat,
    Whitespace,
    XInitialized,
    Whitespace,
    XInstances,
    Whitespace,
    XInterleave,
    Whitespace,
    XSubstr,
    Whitespace,
    XFind,
    Whitespace,
    XCast,
    Whitespace,
    XSubst,
    Whitespace,
    XForEach,
    Whitespace,
    XFilter,
    Whitespace,
    XFoldl,
    Whitespace,
    XHead,
    Whitespace,
    XTail,
    Whitespace,
    XSize,
    Whitespace,
    XSort,
    Whitespace,
    XSwitch,
    Whitespace,
    XEmpty,
    Whitespace,
    XIf,
    Whitespace,
    XCond,
    Whitespace,
    XEq,
    Whitespace,
    XIsA,
    Whitespace,
    XDag,
    Whitespace,
    XNe,
    Whitespace,
    XLe,
    Whitespace,
    XLt,
    Whitespace,
    XGe,
    Whitespace,
    XGt,
    Whitespace,
    XSetDagOp,
    Whitespace,
    XSetDagOpName,
    Whitespace,
    XGetDagOp,
    Whitespace,
    XGetDagOpName,
    Whitespace,
    XExists,
    Whitespace,
    XListRemove,
    Whitespace,
    XToLower,
    Whitespace,
    XToUpper,
    Whitespace,
    XRange,
    Whitespace,
    XGetDagArg,
    Whitespace,
    XGetDagName,
    Whitespace,
    XSetDagArg,
    Whitespace,
    XSetDagName,
    Whitespace,
    XRepr,
    Whitespace,
    XMatch,
    Eof,
]
