crates/syntax/src/snapshots/syntax__lexer__tests__block_comment-2.snap
---
source: crates/syntax/src/lexer.rs
expression: "tokenize(\"/* /* */ */42\")"
---
[
    BlockComment,
    IntVal,
    Eof,
]
