crates/syntax/src/snapshots/syntax__lexer__tests__keyword.snap
---
source: crates/syntax/src/lexer.rs
expression: "tokenize(\"assert bit bits class code dag def defm defset defvar dump else field foreach if in include int let list multiclass string then\")"
---
[
    Assert,
    Whitespace,
    Bit,
    Whitespace,
    Bits,
    Whitespace,
    Class,
    Whitespace,
    Code,
    Whitespace,
    Dag,
    Whitespace,
    Def,
    Whitespace,
    Defm,
    Whitespace,
    Defset,
    Whitespace,
    Defvar,
    Whitespace,
    Dump,
    Whitespace,
    ElseKw,
    Whitespace,
    Field,
    Whitespace,
    Foreach,
    Whitespace,
    If,
    Whitespace,
    In,
    Whitespace,
    Include,
    Whitespace,
    Int,
    Whitespace,
    Let,
    Whitespace,
    List,
    Whitespace,
    MultiClass,
    Whitespace,
    String,
    Whitespace,
    Then,
    Eof,
]
