crates/syntax/src/snapshots/syntax__lexer__tests__symbol.snap
---
source: tablegen-parser/src/lexer.rs
expression: "tokenize(\"-+[]{}()<>:;,.=?#...\")"
---
[
    Minus,
    Plus,
    LSquare,
    RSquare,
    LBrace,
    RBrace,
    LParen,
    RParen,
    Less,
    Greater,
    Colon,
    Semi,
    Comma,
    Dot,
    Equal,
    Question,
    Paste,
    DotDotDot,
    Eof,
]
